tests/th/T17820e.stderr
T17820e.hs:9:17: error: [GHC-28914]
    Level error: ‘C’ is bound at level 0 but used at level -1

